tests/NormalTests/paczka2/big_fuzzy/85778351.err
Error in line 18: A362 S492 65,2
Error in line 20: A362 A362 52,2
Error in line 25: HdZ S492 1,7
Error in line 31: LMK3 A13 54,4
Error in line 46: iPiW47t S492 50,3
Error in line 57: iPiW47t A362 25,4
Error in line 67: kKJrSF S492 67,3
Error in line 69: kKJrSF A362 49,8
Error in line 74: HdZ A362 14,3
Error in line 76: kKJrSF A362 69,77
Error in line 84: TKd A3d2 10,0
Error in line 82: iPiW47t A362 44,1
Error in line 85: iPiW47t S492 33,4
Error in line 95: A362 S492 93,4
Error in line 81: kKJrSF A362 151,9
Error in line 78: LMK3 A13 22,9
Error in line 104: HdZ S812 63,1
Error in line 101: iPiW47t A362 75,4
Error in line 111: kKJrSF S492 51,9
Error in line 90: TKd A362 25,8
Error in line 127: A362 S812 50,9
Error in line 123: TKd S492 62,1
Error in line 128: A362 A13 75,6
Error in line 131: A362 S812 89,2
Error in line 133: LMK3 S812 4,1
Error in line 136: qmxri A362 82,9
Error in line 140: qmxri S812 82,7
Error in line 150: LMK3 S49] 66,7
Error in line 137: LMK3 S492 80,4
Error in line 157: qmxri A13 67,5
Error in line 163: TKd S492 109,03
Error in line 158: qmxri S812 92,8
Error in line 170: LMK3 S812 48,6
Error in line 176: LMK3 A362 65,9
Error in line 183: HdZ A362 26,9
Error in line 188: LMK3 S492 4,3
Error in line 189: LMK3 A13 10,0
Error in line 193: TKd A13 94,5
Error in line 199: TKd A13 19,7
Error in line 196: HdZ A13 70,7
Error in line 206: HdZ A362 58,8
Error in line 225: qmxri S492 67,0
Error in line 230: kKJrSF S812 86,51
Error in line 229: qmxri A362 71,7
Error in line 236: kKJrSF A13 879,9
Error in line 223: TKd A362 126,4
Error in line 239: kKJrSF A362 78,9
